--- a/package.json
+++ b/package.json
@@ -23,5 +23,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "https://sekaru.github.io/portfolio2/"
+  "homepage": "https://sekaru.github.io/portfolio/"
 }
