--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "start": "inferno-scripts start",
     "build": "inferno-scripts build",
     "test": "inferno-scripts test --env=jsdom",
-    "eject": "inferno-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "eject": "inferno-scripts eject"
   },
   "browserslist": [
     ">0.2%",
@@ -20,8 +18,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
-  },
-  "homepage": "https://sekaru.github.io/portfolio"
+  "devDependencies": {},
+  "homepage": "/"
 }
